--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
                 name,
                 surname
             });
-            const url = `http://localhost:5500` + params;
+            const url = `http://127.0.0.1:5500/` + params;
             a.setAttribute('href', url);
         })
     </script>
